# understand-quickly

./: .gitignore  .lychee.toml  .release-please-manifest.json  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA-LICENSE.md  LICENSE  NOTICE  README.md  SECURITY.md  package-lock.json  package.json  registry.json  release-please-config.json
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: add-repo.yml  bug.yml  config.yml
.github/workflows/: add-from-issue.yml  audit.yml  auto-merge-dependabot.yml  auto-merge-release-please.yml  auto-merge.yml  cflite-batch.yml  cflite-pr.yml  codeql.yml  pages.yml  (+20 more)
cli/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
docs/: alternatives.md  analytics.md  badge.md  faq.md  privacy.md  publish-template.yml  threat-model.md  verified-publishers.json  verified-publishers.md
fuzz/: fuzz_decode_json.py  fuzz_normalize_repo_url.py
mcp/: README.md  package-lock.json  package.json  server.json  tsconfig.json
python-sdk/: .gitignore  LICENSE  README.md  pyproject.toml
python-sdk/tests/: conftest.py  test_aclient.py  test_cli.py  test_client.py
python-sdk/understand_quickly/: __init__.py  __main__.py  aclient.py  cli.py  client.py  types.py
schemas/: bundle@1.json  code-review-graph@1.json  generic@1.json  gitnexus@1.json  meta.schema.json  understand-anything@1.json
scripts/: aggregate.mjs  badge.mjs  check-versions.mjs  extract.mjs  issue-to-entry.mjs  render-badges.mjs  render-latest.mjs  render-readme.mjs  render-sitemap.mjs  shard.mjs  sync.mjs  validate.mjs  well-known.mjs
site/: about.html  add.css  add.html  add.js  app.js  index.html  robots.txt  sitemap.xml  stats.json  styles.css  viewer.js
tests/: registry-smoke.json
(+81 files in other folders)
